# capstone_project

./: .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  main.py  ubuntu_22_04_clean_install.sh  windows_vs2022_postbuild_utility.txt
configs/: config.yaml
mod/: visualizer.py
src/cpp/kiss_icp/: CMakeLists.txt
src/cpp/kiss_icp/cmake/: CompilerOptions.cmake
src/cpp/kiss_icp/core/: CMakeLists.txt  Preprocessing.cpp  VoxelHashMap.cpp
src/cpp/kiss_icp/metrics/: CMakeLists.txt
src/python/: CMakeLists.txt  setup.py
src/python/kiss_icp/: kiss_icp.py
src/python/kiss_icp/pybind/: CMakeLists.txt
src/python/kiss_icp/tools/: cmd.py  visualizer.py
utils/: create_point_cloud_lite.py  remove_commas.py  rosbag_conventer.py
